--- a/style.css
+++ b/style.css
@@ -32,11 +32,12 @@ body {
   padding: 6px 10px;
   border-radius: 14px;
   transition: all 0.3s;
+  
 }
 .link:hover {
   background-color: #458ff6;
   color: aliceblue;
-  border: 1px solid #458ff6;
+  /* border: 1px solid #458ff6; */
 }
 /* head section */
 .head {
